[package]
name = "rcache-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
env_logger = "0.9.0"
evmap = "10.0.2"
failure = "0.1.8"
futures = "0.3.16"
lazy_static = "1.4.0"
log = "0.4.14"
ntex = {version="0.3.18", features=["rustls"]}
url = "2.2.2"
